Made it work on non windows platforms